--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>clic.sd.skyway</groupId>
-	<artifactId>burp-ctf-extender</artifactId>
+	<artifactId>BurpCTFExtender</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
